packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/sch-003-bad-type.ttrp
// expect: TTRP-SCH-003
def schema adhoc { amount: money }
container c target polars { }
